@startuml
title Edit Schema Feature

'--- STYLE CONFIGURATION ---
skinparam class {
    BackgroundColor<<View>> LightBlue
    BackgroundColor<<ViewModel>> #D0F0F5
    BackgroundColor<<Controller>> #FFAB91
    BackgroundColor<<UseCase>> #FEFECD
    BackgroundColor<<Presenter>> #90EE90
    BackgroundColor<<Service>> #FAFAD2
    BackgroundColor<<DTO>> #D3D3D3
}

class EditSchemaView <<View>> {
  +build(): Widget
}

class EditSchemaViewModel <<ViewModel>> {
  +schema: SchemaDto?
  +status: String
  +id: int
  +schemaNameController: TextEditingController
  +fieldRows: List<SchemaFieldRow>
  +dispose(): void
  +fields(): SchemaField[0..*]
  +addField(): void
  +removeField(): void
  +setStatus(): void
  +setSchema(): void
  +setId(): void
}

class SchemaFieldRow <<ViewModel>> {
  +nameController: TextEditingController
  +typeController: TextEditingController
  +dispose(): void
}

class EditSchemaController <<Controller>> {
  +saveSchema(): void
  +cancel(): void
}

interface IEditSchemaUC <<UseCase>> {
  +editSchema(ModifySchemaRequest dto, int id): void
  +showEditSchemaView(int id): void
}

class EditSchemaUC <<UseCase>> {
  +editSchema(ModifySchemaRequest dto, int id): void
  +showEditSchemaView(int id): void
}

IEditSchemaUC <|.. EditSchemaUC

interface IEditSchemaPresenter <<Presenter>> {
  +onShowEditSchemaView(): void
  +onSchemaEdited(): void
  +onError(): void
}

class EditSchemaPresenter <<Presenter>> {
  +onShowEditSchemaView(): void
  +onSchemaEdited(): void
  +onError(): void
}

IEditSchemaPresenter <|.. EditSchemaPresenter

interface IDataSchema <<Service>> {
  +editSchema(ModifySchemaRequest dto): void
  +getSchema(id: int): GetSchemaResponse
}

class DataSchemaService <<Service>> {
  +editSchema(ModifySchemaRequest dto): void
  +getSchema(id: int): GetSchemaResponse
}

IDataSchema <|.. DataSchemaService

class ModifySchemaRequest <<DTO>> {
  +name: String
  +jsonSchema: String
}

class GetSchemaResponse <<DTO>> {
  +name: String
  +jsonSchema: String
}

class SchemaDto <<DTO>> {
  +name: String
  +jsonSchema: String
}

EditSchemaView ..> EditSchemaController
EditSchemaView ..> EditSchemaViewModel

EditSchemaViewModel *-- SchemaFieldRow
EditSchemaViewModel ..> SchemaDto

EditSchemaController ..> IEditSchemaUC
EditSchemaController ..> EditSchemaViewModel

EditSchemaUC ..> IDataSchema
EditSchemaUC ..> IEditSchemaPresenter

EditSchemaPresenter ..> EditSchemaViewModel

DataSchemaService ..> ModifySchemaRequest
DataSchemaService ..> GetSchemaResponse

@enduml